--- a/pokemon-battle-game/styles-battle.css
+++ b/pokemon-battle-game/styles-battle.css
@@ -25,49 +25,70 @@
 }
 
 * {
-    font-family: 'Lato'; sans-serif;
-}
-
-body; html {
-    height: 100%;
+    font-family: 'Lato', sans-serif;
 }
 
 .bg {
+    position: relative;
+}
+.bg::before {
+    content: "";
     background-image: url('images/ui_bg_green_03.png');
     height: 120%;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    opacity: 0.8;
+    opacity: 0.6;
 }
 
 .my-container{
     margin-left: 1rem;
     margin-right: 1rem;
     padding-top: 1rem;
+    position: relative;
 }
 
-.card-title {
-    font-weight: bold;
+.types-row,
+.panel-row {
+    --bs-gutter-x: 0.5rem;
 }
 
-.btn {
-    border-radius: 0rem;
-    width: 100%;
+.card {
+    margin-bottom: 1rem;
+    border-radius: 0rem;    
 }
 
-.btn-outline-primary {
-    border-color: var(--bgGreen);
-    color: var(--bgGreen);
+.player-card {
+    box-shadow: 0px 0px 1px 2px rgba(0, 123, 255, 1);
 }
 
-.btn-outline-primary:hover, 
-.btn-outline-primary:focus, 
-.btn-outline-primary:active {
-    color: var(--bgGrey);
-    background-color: var(--bgGreen);
-    border-color: var(--bgGreen);
+.opponent-card {
+    box-shadow: 0px 0px 1px 2px rgba(220,53,69,1);
 }
+
+.player-title {
+    background-color: transparent;
+    color: rgba(0, 123, 255);
+    padding: 1rem;
+    letter-spacing: 0.1rem;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.opponent-title {
+    background-color: transparent;
+    color: rgba(220,53,69);
+    padding: 1rem;
+    letter-spacing: 0.1rem;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
 .pokemon-img {
     height: 50%;
 }
@@ -76,11 +97,10 @@ body; html {
     width: auto;
 }
 
-
-.card {
-    margin-bottom: 1rem;
+.btn {
     border-radius: 0rem;
-    box-shadow: 0px 0px 2px 2px rgba(94, 240, 171, 0.2);
+    width: 100%;
+    letter-spacing: 0.1rem;
 }
 
 .badge-type {
@@ -100,13 +120,53 @@ hr {
     margin-bottom: 0.5rem;
 }
 
-.types-row,
-.panel-row {
-    --bs-gutter-x: 0.5rem;
+.progress-bar {
+    color: white;
+    font-size: 0.7rem;
 }
 
-.progress-bar {
-    background-color: var(--bgGreen);
-    color: var(--bgGrey);
-    font-size: 0.7rem;
+.bar-player {
+    background-color: rgba(0,123,255);
+}
+
+.bar-opponent {
+    background-color: #dc3455;
+}
+
+.small-card {
+    height: 7.5rem; 
+    width: 7.5rem;
+    padding-top: 0.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
+.my-img-small {
+    max-height: 65%;
+    width: auto;
+    object-fit: contain;
+}
+.card-title-small {
+    margin-top: 0.3rem;
+    text-align: center;
+}
+
+.prog-small {
+    height: 0.3rem;
+    margin-top: 0.1rem;
+}
+
+.alert-banner {
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.alert-primary {
+    color: rgba(0,123,255);
+}
+
+.alert-danger {
+    color: #dc3455
 }
