--- a/pokemon-battle-game/styles-battle.css
+++ b/pokemon-battle-game/styles-battle.css
@@ -132,6 +132,14 @@ h1 {
     text-transform: uppercase;
 }
 
+.modal-title {
+    letter-spacing: 0.1rem;
+}
+
+.modal-content {
+    border-radius: 0rem;
+}
+
 .player-title {
     color: rgba(0, 123, 255);
 }
@@ -140,7 +148,7 @@ h1 {
     color: rgba(220,53,69);
 }
 
-.battle-title {
+.battle-title, .modal-title {
     color: rgba(49,57,58,1)
 }
 
@@ -160,6 +168,7 @@ h1 {
     border-radius: 0rem;
     width: 100%;
     letter-spacing: 0.1rem;
+    text-transform: uppercase;
 }
 
 .btn-danger:hover {
@@ -269,7 +278,7 @@ hr {
 }
 
 #battle-messages {
-    height: 27.75rem;
+    height: 27.5rem;
     overflow-y: scroll;
     overflow-x: hidden;
     background-color: white;
@@ -279,4 +288,21 @@ hr {
 ::-webkit-scrollbar {
     width: 0px;
     background: transparent;
+}
+
+svg {
+    fill: rgba(49,57,58,1);
+    height: 2rem;
+    width: 2rem;
+    cursor: pointer;
+}
+
+svg:hover {
+    fill: rgba(49,57,58,0.8);
+}
+
+.tooltip-inner {
+    text-align: left;
+    font-size: 0.7rem;
+    text-transform: capitalize;
 }
